<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AgregarActivity">


    <TextView
        android:id="@+id/prueba"
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <EditText
        android:id="@+id/tipusCicle"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:hint="@string/tipusCicle" />
    <EditText
        android:id="@+id/tipus"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:hint="@string/tipus" />
    <EditText
        android:id="@+id/titol_new"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:hint="@string/titol" />
    <EditText
        android:id="@+id/descripcio_new"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:hint="@string/descripcio" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_anyadirNew"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/anyadir" />

        <Button
            android:id="@+id/btn_cancelarNew"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>